Added saving URL and platform list to commands
